Kaylee chain is now in working state. This commit introduces web workers to run background tasks in browser. The code is somewhat stable now and is a good base for the next increment.

--- a/src/kayleejs/src/Makefile
+++ b/src/kayleejs/src/Makefile
@@ -1,9 +1,12 @@
-TARGETS = kaylee.js kldemo.js klconsole.js
+TARGETS = kaylee.js kldemo.js klconsole.js klworker.js
 
 all: $(TARGETS)
 
 kaylee.js: kaylee.coffee
-	coffee -c kaylee.coffee 
+	coffee -j kaylee.js -c kaylee.coffee 
+
+klworker.js: klworker.coffee
+	coffee --bare -c klworker.coffee
 
 kldemo.js: kldemo.coffee
 	coffee -c kldemo.coffee 
