Modified script-url logic. Preparing to modifty the main Makefile.

--- a/src/kayleejs/src/Makefile
+++ b/src/kayleejs/src/Makefile
@@ -1,5 +1,11 @@
 TARGETS = kaylee.js kldemo.js klconsole.js klworker.js
 
+ifeq ($(origin KL_JSLIB_DIR), environment)
+TARGETS += remote
+CLEAN_TARGETS += clean_remote
+endif
+
+
 all: $(TARGETS)
 
 kaylee.js: kaylee.coffee
@@ -14,5 +20,13 @@ kldemo.js: kldemo.coffee
 klconsole.js: klconsole.coffee
 	coffee -c klconsole.coffee 
 
-clean:
+remote:
+	mkdir -p  $(KL_JSLIB_DIR)
+	cp *.js $(KL_JSLIB_DIR)
+
+
+clean: $(CLEAN_TARGETS)
 	rm -f *.js
+
+clean_remote:
+	rm -rf $(KL_JSLIB_DIR)
