--- a/src/projects/hash_cracker/Makefile
+++ b/src/projects/hash_cracker/Makefile
@@ -5,7 +5,7 @@ LIBDIR = res/js
 TARGETS = $(LIBDIR)/$(LIB)
 CLEAN_TARGETS = 
 
-ifeq ($(origin PJ_JSLIB_DIR), environment)
+ifeq ($(origin PJ_RES_DIR), environment)
 TARGETS += remote
 CLEAN_TARGETS += clean_remote
 endif
@@ -16,11 +16,11 @@ $(LIBDIR)/$(LIB): $(LIBDIR)/$(PROJECT_NAME).coffee
 	coffee --bare -c $(LIBDIR)/$(PROJECT_NAME).coffee
 
 remote:
-	mkdir -p  $(PJ_JSLIB_DIR)/$(PROJECT_NAME)
-	cp $(LIBDIR)/$(PROJECT_NAME).js $(PJ_JSLIB_DIR)/$(PROJECT_NAME)
+	mkdir -p  $(PJ_RES_DIR)/$(PROJECT_NAME)
+	cp $(LIBDIR)/*.js $(PJ_RES_DIR)/$(PROJECT_NAME)
 
 clean: $(CLEAN_TARGETS)
 	rm -f $(LIBDIR)/$(PROJECT_NAME).js 
 
 clean_remote:
-	rm -f $(PJ_JSLIB_DIR)/$(PROJECT_NAME)/$(PROJECT_NAME).js
+	rm -rf $(PJ_RES_DIR)/$(PROJECT_NAME)
