--- a/src/kaylee/contrib/client/Makefile
+++ b/src/kaylee/contrib/client/Makefile
@@ -1,6 +1,7 @@
-TARGETS = kaylee.js kldemo.js klconsole.js klworker.js
+TARGETS = kaylee.js klworker.js
 
-ifeq ($(origin KL_JSLIB_DIR), environment)
+ifeq ($(origin KL_BUILD_DIR), environment)
+KL_JS_DIR = $(KL_BUILD_DIR)/static/js/kaylee
 TARGETS += remote
 CLEAN_TARGETS += clean_remote
 endif
@@ -14,19 +15,13 @@ kaylee.js: kaylee.coffee
 klworker.js: klworker.coffee
 	coffee --bare -c klworker.coffee
 
-kldemo.js: kldemo.coffee
-	coffee -c kldemo.coffee 
-
-klconsole.js: klconsole.coffee
-	coffee -c klconsole.coffee 
-
 remote:
-	mkdir -p  $(KL_JSLIB_DIR)
-	cp *.js $(KL_JSLIB_DIR)
+	mkdir -p $(KL_JS_DIR)
+	cp *.js $(KL_JS_DIR)
 
 
 clean: $(CLEAN_TARGETS)
 	rm -f *.js
 
 clean_remote:
-	rm -rf $(KL_JSLIB_DIR)
+	rm -rf $(KL_JS_DIR)
