Added internal AJAX routine. No more jQuery dependecy!
This commit still contains jQuery code to execute AJAX calls.
The code will be removed as obsolete.

--- a/src/Makefile
+++ b/src/Makefile
@@ -23,9 +23,7 @@ demo: client
 client:
 	$(MAKE) $(MAKECMDGOALS) -C $(CLIENT_DIR)
 
-clean: 
+clean : clean $(PJ_DIRS) demo client
 	rm -rf $(KL_BUILD_DIR)
-
-cleanall : clean $(PJ_DIRS) demo client
 
 .PHONY: clean demo projects $(PJ_DIRS)
