--- a/doc/_themes/kaylee/theme.conf
+++ b/doc/_themes/kaylee/theme.conf
@@ -1,7 +1,7 @@
 [theme]
 inherit = basic
-stylesheet = flasky.css
-pygments_style = flask_theme_support.FlaskyStyle
+stylesheet = kaylee.css
+pygments_style = kaylee_theme_support.FlaskyStyle
 
 [options]
 index_logo = ''
