First good-looking kaylee doc style.

--- a/doc/_themes/kaylee/theme.conf
+++ b/doc/_themes/kaylee/theme.conf
@@ -4,6 +4,4 @@ stylesheet = kaylee.css
 pygments_style = kaylee_theme_support.FlaskyStyle
 
 [options]
-index_logo = ''
-index_logo_height = 120px
-touch_icon = 
+sidebarwidth = 200
