--- a/demo/Makefile
+++ b/demo/Makefile
@@ -33,7 +33,7 @@ src/kldemo.js: src/kldemo.coffee
 	coffee -j src/kldemo.js -c src/kldemo.coffee
 	cp src/kldemo.js $(KL_CLIENT_DIR)
 
-clean : clean $(PJ_DIRS) demo client
+clean : clean $(PJ_DIRS)
 	rm -rf $(KL_BUILD_DIR)
 	rm -f src/*.js
 
