--- a/doc/_themes/kaylee/theme.conf
+++ b/doc/_themes/kaylee/theme.conf
@@ -1,7 +1,7 @@
 [theme]
 inherit = basic
 stylesheet = kaylee.css
-pygments_style = kaylee_theme_support.FlaskyStyle
+pygments_style = kaylee_theme_support.KayleeStyle
 
 [options]
 sidebarwidth = 200
