--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,1 +1,6 @@
-include kaylee/client/*.js
+include README.rst CHANGES LICENSE NOTICE AUTHORS run-tests.py
+recursive-include kaylee/client *.js
+prune docs/_build
+recursive-include docs *
+recursive-exclude docs *.pyc
+recursive-exclude docs *.pyo
