--- a/demo/projects/hash_cracker/Makefile
+++ b/demo/projects/hash_cracker/Makefile
@@ -2,10 +2,12 @@ PROJECT_NAME = hash_cracker
 LIB = $(PROJECT_NAME).js
 LIBDIR = res/js
 
+
 TARGETS = $(LIBDIR)/$(LIB)
 CLEAN_TARGETS = 
 
 ifeq ($(origin PJ_RES_DIR), environment)
+PJ_JS_DIR = $(PJ_RES_DIR)/$(PROJECT_NAME)/js
 TARGETS += remote
 CLEAN_TARGETS += clean_remote
 endif
@@ -16,11 +18,11 @@ $(LIBDIR)/$(LIB): $(LIBDIR)/$(PROJECT_NAME).coffee
 	coffee --bare -c $(LIBDIR)/$(PROJECT_NAME).coffee
 
 remote:
-	mkdir -p  $(PJ_RES_DIR)/$(PROJECT_NAME)
-	cp $(LIBDIR)/*.js $(PJ_RES_DIR)/$(PROJECT_NAME)
+	mkdir -p  $(PJ_JS_DIR)
+	cp $(LIBDIR)/*.js $(PJ_JS_DIR)
 
 clean: $(CLEAN_TARGETS)
 	rm -f $(LIBDIR)/$(PROJECT_NAME).js 
 
 clean_remote:
-	rm -rf $(PJ_RES_DIR)/$(PROJECT_NAME)
+	rm -rf $(PJ_JS_DIR)/$(PROJECT_NAME)
