--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,2 @@
-include README CHANGES LICENSE NOTICE AUTHORS run-tests.py
+include README README.rst CHANGES LICENSE NOTICE AUTHORS run-tests.py
 recursive-include kaylee/client *.js
