--- a/.pylintrc
+++ b/.pylintrc
@@ -33,17 +33,13 @@ load-plugins=
 # can either give multiple identifier separated by comma (,) or put this option
 # multiple time (only on the command line, not in the configuration file where
 # it should appear only once).
-disable=I0011,C0111,C0103,R0903,W0142,R0904
+disable=I0011,C0111,C0103,R0903,W0142,R0904,I0013
 # C0111: Missing docstring
 # C0103: Invalid name XXX (should match (([A-Z_][A-Z0-9_]*)|(__.*__))$)
 # R0903: Too few public methods
 # W0142: Used * or ** magic
 # R0904: Too many public methods
-
-# C0103,W0212,R0903,R0914,W0142,W0212,W0603,W0402
-
-# W0603: Using the global statement in loader for the _classes cache
-# W0402: Uses of a deprecated module 'string' in util.py, which is NOT deprecated at all!
+# I0013:  1,0: Ignoring entire file
 
 [REPORTS]
 
