--- a/doc/src/_static/Makefile
+++ b/doc/src/_static/Makefile
@@ -9,6 +9,7 @@ CLEAN_TARGETS =
 
 # if make has been called recursively, add remote targets
 ifeq ($(origin PJ_RES_DIR), environment)
+PJ_JS_DIR = $(PJ_RES_DIR)/$(PROJECT_NAME)/js
 TARGETS += remote
 CLEAN_TARGETS += clean_remote
 endif
@@ -19,8 +20,8 @@ $(LIBDIR)/$(LIB): $(LIBDIR)/$(PROJECT_NAME).coffee
 	coffee --bare -c $(LIBDIR)/$(PROJECT_NAME).coffee
 
 remote:
-	mkdir -p  $(PJ_RES_DIR)/$(PROJECT_NAME)
-	cp $(LIBDIR)/*.js $(PJ_RES_DIR)/$(PROJECT_NAME)
+	mkdir -p  $(PJ_JS_DIR)
+	cp $(LIBDIR)/*.js $(PJ_JS_DIR)
 
 clean: $(CLEAN_TARGETS)
 	rm -f $(LIBDIR)/$(PROJECT_NAME).js
