Removed WORKER_SCRIPT kaylee config parameter.
WORKER_SCRIPT_URL is not any longer required to be passed from
the client to the server. It is now dynamically found inside
kaylee.js script (as worker.js).

--- a/kaylee/client/Makefile
+++ b/kaylee/client/Makefile
@@ -3,13 +3,15 @@ KL_COFFEE = klshared.coffee klutil.coffee klajax.coffee klbenchmark.coffee \
 			kaylee.coffee 
 KL_WORKER_COFFEE = klshared.coffee klutil.coffee klajax.coffee klworker.coffee
 
+COFFEE = coffee
+
 all: $(TARGETS)
 
 kaylee.js: $(KL_COFFEE)
-	coffee -j kaylee.js -c $(KL_COFFEE)
+	$(COFFEE) -j kaylee.js -c $(KL_COFFEE)
 
 klworker.js: $(KL_WORKER_COFFEE)
-	coffee -j klworker.js --bare -c $(KL_WORKER_COFFEE)
+	$(COFFEE) -j klworker.js --bare -c $(KL_WORKER_COFFEE)
 
 clean: 
 	rm -f *.js
