Updating the documentation and build templates.

--- a/kaylee/manager/commands/templates/build_template/js/Makefile
+++ b/kaylee/manager/commands/templates/build_template/js/Makefile
@@ -1,9 +1,9 @@
-TARGETS = kldemo.js
+TARGETS = kldebug.js
 
 all: $(TARGETS)
 
-kldemo.js: kldemo.coffee
-	coffee -j kldemo.js -c kldemo.coffee klconsole.coffee
+kldebug.js: kldebug.coffee
+	coffee -j kldebug.js -c kldebug.coffee klconsole.coffee
 
 clean: 
-	rm -f *.js
+	rm -f kldebug.js
