--- a/kaylee/manager/commands/templates/build_template/js/Makefile
+++ b/kaylee/manager/commands/templates/build_template/js/Makefile
@@ -2,7 +2,7 @@ TARGETS = kldebug.js
 
 all: $(TARGETS)
 
-kldebug.js: kldebug.coffee
+kldebug.js: kldebug.coffee klconsole.coffee
 	coffee -j kldebug.js -c kldebug.coffee klconsole.coffee
 
 clean: 
