--- a/kaylee/manager/commands/templates/project_template/project.py.template
+++ b/kaylee/manager/commands/templates/project_template/project.py.template
@@ -2,10 +2,9 @@ from kaylee.project import Project, {{ project_mode }}
 from kaylee.errors import InvalidResultError
 
 class {{project_class_name}}(Project):
-    mode = {{ project_mode }}
 
     def __init__(self, *args, **kwargs):
-        super({{ project_class_name }}, self).__init__(*args, **kwargs)
+        super({{ project_class_name }}, self).__init__(mode={{ project_mode }}, *args, **kwargs)
 
         self.client_config.update({
 
