--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,14 @@
 language: python
 python:
-    - 2.7
+  - 2.7
 
 # command to install dependencies
 install:
   - "pip install . --use-mirrors"
-  - "pip install --use-mirrors jinja2 werkzeug flask django 
+  - "pip install --use-mirrors jinja2 werkzeug flask django
 
 # command to run tests
 script: run-tests.py
+
+notifications:
+  email: false
