--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
 # command to install dependencies
 install:
   - "pip install . --use-mirrors"
-  - "pip install --use-mirrors jinja2 werkzeug flask django"
+  - "pip install --use-mirrors jinja2 werkzeug flask django pycrypto"
 
 # command to run tests
 script: run-tests.py
