Implement single Kaylee instance on client side
This implements Issue #8. Kaylee communicates with other instances
via localStorage. The algorithm works as follows:

Time
 |    Instance 1: PING -> No one answers in 1.5 seconds -> START
 |
 |    Instance 2: PING -> Instance 1: PONG -> STOP
\|/
 *

--- a/kaylee/client/Makefile
+++ b/kaylee/client/Makefile
@@ -1,6 +1,6 @@
 TARGETS = kaylee.js klworker.js
 KL_COFFEE = klshared.coffee klutil.coffee klajax.coffee klbenchmark.coffee \
-			kaylee.coffee 
+			klinstance.coffee kaylee.coffee 
 KL_WORKER_COFFEE = klshared.coffee klutil.coffee klajax.coffee klworker.coffee
 
 COFFEE = coffee
